--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMW.com | The international BMW Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/logo.svg">
+    <link rel="icon" href="logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
         </div>
         <div id="nav">
             <div id="logo">
-                <img src="/logo.svg">
+                <img src="logo.svg">
             </div>
             <div id="para">
                 <p>Sheer Driving Pleasure</p>
@@ -53,8 +53,8 @@
         </div>
 </div>
 <div id="box223">
-    <a class="box112" href="" ><img src="/1234.jpg" style="width:100%;height:100%; object-fit:cover;" > </a>
-    <a  class="box112" href="" ><img src="/car222.png"style="width:100%;height:100%; object-fit:cover;"> </a>
+    <a class="box112" href="" ><img src="1234.jpg" style="width:100%;height:100%; object-fit:cover;" > </a>
+    <a  class="box112" href="" ><img src="car222.png"style="width:100%;height:100%; object-fit:cover;"> </a>
     <div id="mainLetter2">
         <a id="para11" href="">Quiz</a>
             <a id="para22" href="">Can you identify all the</a>
